[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ryon"
authors = [{name = "Pavel Klinger", email = "ja@bigr.cz"}]
dynamic = ["version", "description"]
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.10"

[project.urls]
Home = "https://github.com/bigr/ryon"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]
