[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ryon"
authors = [{name = "Pavel Klinger", email = "ja@bigr.cz"}]
dynamic = ["version", "description"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "lark==1.1.9"
]

[project.urls]
Home = "https://github.com/bigr/ryon"

[project.optional-dependencies]
test = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0"
]
dev = [
    "pre-commit==3.7.0",
    "ruff==0.4.1",
    "mypy==1.9.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]

[tool.setuptools_scm]
write_to = "ryon/_version.py"
